fix padding on mobile and add ceremony photo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     font-family: 'Source Sans Pro', sans;
 }
+
 /* ------Colours------ */
 
 body {
@@ -26,6 +27,7 @@ body {
 .intro-container p {
     margin-top: 20px;
 }
+
 
 
 /* ------Heading------ */
@@ -64,6 +66,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
     
     display: flex;
     align-items: center;
@@ -74,6 +77,25 @@ body {
 
 .intro-container {
     padding: 30px 0;
+}
+
+.intro-image-container {
+    height: 100vh;
+    width: 100%;
+
+    background: url('../images/ceremony-kiss.jpg') no-repeat center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    
+    position: relative;
+
 }
 
 /*-----Buttons------*/
@@ -151,6 +173,9 @@ p.lead {
 
 /* ------Media Query------ */
 
-
-
+ @media (max-width: 767px){
+    .navbar {
+       padding:0 20px;
+    } 
+ }
 
